Switching to java 11 and gradle 7: first step