@@ -476,12 +476,12 @@ public class JDialogAttribute extends JDialogBase implements ActionListener, Lis
     }
     
     public void addType(String s) {
-        initValues.add(new Boolean(true));
+        initValues.add(Boolean.valueOf(true));
         typeBox.addItem(s);
     }
     
     public void addType(String s, boolean b) {
-        initValues.add(new Boolean(b));
+        initValues.add(Boolean.valueOf(b));
         typeBox.addItem(s);
     }
     
